--- a/src/index.css
+++ b/src/index.css
@@ -2,17 +2,37 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+* {
+  margin: 0;
+  padding: 0;
+  outline-style: none;
+  box-sizing: border-box;
+}
+
+ul li {
+  list-style: none;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+img {
+  vertical-align: center;
+  border: 0;
+}
+
+html {
+  font-size: 16px;
+}
+
 body {
-    background: skyblue;
-}
-.container {
-    margin:auto;
-    max-width: 960px;
-}
-.todo-block {
-    padding:30px;
-    margin-top:50px;
-    background: #fff;
-    border-radius: 10px;
-    box-shadow: -9px 17px 13px rgb(0 0 0 / 16%);
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 14px;
+  color: #000;
+  line-height: 1.4;
+  letter-spacing: -0.3;
+  word-break: keep-all;
 }
